--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,136 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+:root {
+  --bg-color: #323437;
+  --main-color: #e2b714;
+  --caret-color: #e2b714;
+  --sub-color: #646669;
+  --text-color: #d1d0c5;
+  --error-color: #ca4754;
+  --error-extra-color: #7e2a33;
+  --colorful-error-color: #ca4754;
+  --colorful-error-extra-color: #7e2a33;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  font-family: monospace;
+}
+
+.app {
+  padding: 3.5rem 10rem;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.logo {
+  width: 4rem;
+  height: 1rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 4px solid var(--main-color);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.heading-text {
+  margin-left: 1rem;
+  cursor: pointer;
+  position: relative;
+}
+
+.heading-text p {
+  position: absolute;
+
+  top: -12px;
+  font-size: 15px;
+  color: var(--sub-color);
+}
+
+.heading-text h1 {
+  font-size: 2rem;
+  margin-bottom: 0;
+}
+
+.header-left {
+  text-align: right;
+}
+
+.header-left p span {
+  color: var(--sub-color);
+  font-size: 15px;
+  margin-right: 0.2rem;
+  cursor: pointer;
+  transition: color 0.5s ease;
+}
+
+.header-left p span:hover {
+  color: var(--text-color);
+}
+
+.header-left p .active {
+  color: var(--main-color);
+}
+
+
+.content {
+  overflow-wrap: break-word;
+  color: var(--sub-color);
+  font-size: 21pt;
+	overflow: hidden;
+	height: 100px;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	user-select: none;
+}
+
+.word{
+  margin-right: 10px;
+  position: relative;
+}
+
+.caret{
+  color: var(--caret-color);
+  font-size: 2rem;
+  cursor: pointer;
+  animation: caret 1.5s 1s infinite;
+  position: absolute;
+  top:-5px;
+  /* left: -3px; */
+  opacity: 1;
+}
+
+@keyframes caret {
+  0% ,100%  {opacity: 0;}
+  50%  {opacity: 1;}
 }
