--- a/src/index.css
+++ b/src/index.css
@@ -97,50 +97,78 @@ body {
   color: var(--main-color);
 }
 
+.result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.result h2 {
+  margin-bottom: 0.5rem;
+}
+.result p {
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+}
 
+.result .restart {
+  font-size: 1;
+  margin-bottom: 0;
+  cursor: pointer;
+  border: 1px solid var(--main-color);
+  padding: 0.5rem;
+}
 
-
-.typing-field{
+.timer {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+  color:var(--main-color)
+}
+.typing-field {
   overflow-wrap: break-word;
   color: var(--sub-color);
   font-size: 21pt;
-	overflow: hidden;
-	height: 100px;
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	user-select: none;
+  overflow: hidden;
+  height: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  user-select: none;
 }
 
-
-.word{
+.word {
   margin-right: 1rem;
   position: relative;
 }
 
-.correct{
+.correct {
   color: var(--text-color);
 }
 
-.incorrect{
+.incorrect {
   color: var(--error-color);
 }
 
-.extra{
+.extra {
   color: var(--error-extra-color);
 }
 
-.caret{
+.caret {
   color: var(--caret-color);
   font-size: 2rem;
   cursor: pointer;
   animation: caret 1.5s 1s infinite;
   position: absolute;
-  top:-5px;
+  top: -5px;
   opacity: 1;
 }
 
 @keyframes caret {
-  0% ,100%  {opacity: 0;}
-  50%  {opacity: 1;}
+  0%,
+  100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
 }
